--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
 body{
     background-color: aqua;
-    
+}
+.form-body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0px;
+}
+form{
+    background: white;
+    border-radius: 5px;
+    font-size: 20px;
 }
