--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,20 @@ h2{
 .form-control{
     padding: 10px;
 }
+button{
+    border: 2px solid white;
+    border-radius: 7px;
+    color: white;
+    background: aqua;
+    font-size: 25px;
+    width: 55vh;
+    padding: 10px;
+    margin:10px;
+}
+.form-control input {
+    border: 2px solid whitesmoke;
+    border-radius: 4px;
+    display: block;
+    padding: 10px;
+    width:55vh;
+}
