--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 body{
     background-color: aqua;
 }
+header { 
+    font-weight: bold;
+    font-size: 1em;
+    margin-left: 100px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
 .form-body{
     display: flex;
     align-items: center;
