--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,10 @@ body{
 }
 header { 
     font-weight: bold;
-    font-size: 1em;
+    font-size: 20px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 20px;
     margin-left: 100px;
-    display: block;
-    align-items: center;
-    justify-content: center;
 }
 .form-body{
     display: flex;
